[gd_scene load_steps=4 format=2]

[ext_resource path="res://TextRestrictor.gd" type="Script" id=1]
[ext_resource path="res://Offset.gd" type="Script" id=2]
[ext_resource path="res://TextManager.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 68.0
script = ExtResource( 2 )

[node name="Text" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer/Text"]
margin_top = 3.0
margin_right = 80.0
margin_bottom = 17.0
rect_min_size = Vector2( 80, 0 )
text = "Text"

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer/Text"]
margin_left = 84.0
margin_right = 475.0
margin_bottom = 20.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer/Text"]
margin_left = 479.0
margin_top = 3.0
margin_right = 526.0
margin_bottom = 17.0
text = "Indices"

[node name="TextEdit2" type="TextEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer/Text"]
margin_left = 530.0
margin_right = 921.0
margin_bottom = 20.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer/Text"]
margin_left = 925.0
margin_right = 1023.0
margin_bottom = 20.0
text = "Calculate this"

[node name="Offsets" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 44.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer/Offsets"]
margin_top = 3.0
margin_right = 80.0
margin_bottom = 17.0
rect_min_size = Vector2( 80, 0 )
text = "Offsets"

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer/Offsets"]
margin_left = 84.0
margin_right = 475.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer/Offsets"]
margin_left = 479.0
margin_top = 3.0
margin_right = 526.0
margin_bottom = 17.0
text = "Indices"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer/Offsets"]
margin_left = 530.0
margin_right = 921.0
margin_bottom = 20.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer/Offsets"]
margin_left = 925.0
margin_right = 1023.0
margin_bottom = 20.0
text = "Calculate this"

[node name="Ciphertext" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 68.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer/Ciphertext"]
margin_top = 3.0
margin_right = 80.0
margin_bottom = 17.0
rect_min_size = Vector2( 80, 0 )
text = "Ciphertext"

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer/Ciphertext"]
margin_left = 84.0
margin_right = 475.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer/Ciphertext"]
margin_left = 479.0
margin_top = 3.0
margin_right = 526.0
margin_bottom = 17.0
text = "Indices"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer/Ciphertext"]
margin_left = 530.0
margin_right = 921.0
margin_bottom = 20.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer/Ciphertext"]
margin_left = 925.0
margin_right = 1023.0
margin_bottom = 20.0
text = "Calculate this"

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 86.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
[connection signal="text_changed" from="CanvasLayer/VBoxContainer/VBoxContainer/Text/TextEdit" to="CanvasLayer/VBoxContainer/VBoxContainer/Text" method="raw_text_changed"]
[connection signal="text_changed" from="CanvasLayer/VBoxContainer/VBoxContainer/Text/TextEdit2" to="CanvasLayer/VBoxContainer/VBoxContainer/Text" method="indices_changed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/Text/Button" to="CanvasLayer/VBoxContainer/VBoxContainer" method="calculate_text"]
[connection signal="text_changed" from="CanvasLayer/VBoxContainer/VBoxContainer/Offsets/TextEdit" to="CanvasLayer/VBoxContainer/VBoxContainer/Offsets" method="raw_text_changed"]
[connection signal="text_changed" from="CanvasLayer/VBoxContainer/VBoxContainer/Offsets/TextEdit2" to="CanvasLayer/VBoxContainer/VBoxContainer/Offsets" method="indices_changed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/Offsets/Button" to="CanvasLayer/VBoxContainer/VBoxContainer" method="calculate_offsets"]
[connection signal="text_changed" from="CanvasLayer/VBoxContainer/VBoxContainer/Ciphertext/TextEdit" to="CanvasLayer/VBoxContainer/VBoxContainer/Ciphertext" method="raw_text_changed"]
[connection signal="text_changed" from="CanvasLayer/VBoxContainer/VBoxContainer/Ciphertext/TextEdit2" to="CanvasLayer/VBoxContainer/VBoxContainer/Ciphertext" method="indices_changed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/Ciphertext/Button" to="CanvasLayer/VBoxContainer/VBoxContainer" method="calculate_ciphertext"]
